sventon change history
-----------------------------------------------------------------------------------------

[449] Fixed: Bug #6705 and #6374.
[444] Added: Feature #1867 - Raw file view.

[433] Release 1.0 RC1 (2006-02-14)
[423] Added: Upgraded to JavaSVN 1.0.3.
[408] Fixed: Renamed 'default-sventon.properties' to 'sventon.properties.
[398] Fixed: Bug #5662 - Uncaught exceptions causes stack trace on screen
[397] Added: Feature #1685 - Background index population.
[394] Added: Upgraded to Spring 1.2.6
[373] Added: Display of all current locks, recursively.
[365] Added: Upgraded to JavaSVN 1.0.2.
[356] Added: File lock display in browser view.
[350] Fixed: Removed mount point feature (too much pain, not enough gain).
[348] Added: Latest commit info stays visible when following a link from it.
[346] Fixed: RSS item layout.
[344] Added: Repository changes now published as an RSS feed.
[341] Added: Upgraded to JavaSVN 1.0.1.
[338] Added: More validation during configuration.
[336] Fixed: Revision changes are now sorted before applied to index.
[336] Fixed: Index is not stored to disk if empty.

[334] Release 0.9.2 (2005-12-18)
[328] Fixed: Bug #5884 - Index update fails when adding or removing directories.
[328] Added: Index is now written to disk directly after update.

[324] Release 0.9.1 (2005-12-11)
[318] Added: Default property values to get rid of empty default-sventon.properties.
[313] Fixed: Bug #5847 - Index update fails when files are removed.
[311] Fixed: User ended up in the wrong revision if following a link from the log details view.

[309] Release 0.9.0 (2005-12-05)
[276] Added: Possibility to do CamelCase searches.
[212] Added: View contents of zip archives (including jar).
[206] Added: Improve index update strategy.
[198] Added: Show selected (image) files as thumbnails.
[174] Added: Diff revisions of same file.
[171] Added: View all changes in one revision (log entry).
[157] Added: Serialize index to disk.